<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".PersegiPanjang" android:id="@+id/frameLayout2">
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                   android:layout_height="match_parent">
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/in_panjang" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.100000024"
            android:hint="@string/panjang" android:autofillHints="" tools:targetApi="o"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/in_lebar" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/in_panjang" android:hint="@string/lebar" android:layout_marginTop="16dp"
            app:layout_constraintHorizontal_bias="0.0" android:autofillHints="" tools:targetApi="o"/>
    <Button
            android:text="@string/hitung"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bt_hitungPersegi" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/in_lebar" app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/luas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_luasPP" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/bt_hitungPersegi" app:layout_constraintHorizontal_bias="0.02"/>
    <TextView
            android:text="@string/keliling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_kelilingPP" app:layout_constraintEnd_toEndOf="@+id/tv_luasPP"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp" app:layout_constraintStart_toStartOf="@+id/tv_luasPP"
            app:layout_constraintTop_toBottomOf="@+id/tv_luasPP" android:layout_marginTop="16dp"
            app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/_0luasPP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/hasilLuas_PP"
            app:layout_constraintBottom_toBottomOf="@+id/tv_luasPP" app:layout_constraintTop_toTopOf="@+id/tv_luasPP"
            app:layout_constraintStart_toEndOf="@+id/tv_luasPP" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" android:layout_marginTop="16dp" android:layout_marginBottom="16dp"/>
    <TextView
            android:text="@string/_0kelPP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/hasilKeliling_PP"
            app:layout_constraintTop_toTopOf="@+id/tv_kelilingPP"
            app:layout_constraintBottom_toBottomOf="@+id/tv_kelilingPP"
            app:layout_constraintStart_toEndOf="@+id/tv_kelilingPP" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" android:layout_marginTop="16dp" android:layout_marginBottom="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>